--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,5 @@ deployment:
     - export DEPLOYPATH=/home/jambfksl/public_html/
     # - /bin/cp index.html $DEPLOYPATH
     # - /bin/cp style.css $DEPLOYPATH # copy individual files
-    - /bin/cp -R ./ $DEPLOYPATH # copy entire directory into public_html
+    - /bin/rm -rf $DEPLOYPATH # empty out deployment directory
+    - /bin/cp -R ./ $DEPLOYPATH # copy source into public_html
