--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/jambfksl/public_html/
-    - /bin/rm -rf $DEPLOYPATH
+    - /bin/rm -rf /home/jambfksl/public_html/*
+    - /bin/cp -r /home/jambfksl/repositories/jamboree/* $DEPLOYPATH
