--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,4 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/jambfksl/public_html/
-    - /bin/rm -rf /home/jambfksl/public_html/*
-    - /bin/cp -r /home/jambfksl/repositories/jamboree/* $DEPLOYPATH
+    - /bin/cp -r /home/jambfksl/repositories/jamboree/* /home/jambfksl/public_html/
