--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,5 @@
 ---
 deployment:
   tasks:
+    - /bin/rm -rf /home/jambfksl/public_html/*
     - /bin/cp -r /home/jambfksl/jamboree-web/* /home/jambfksl/public_html/
